<resources>
    <string name="app_name">Union Health Patient Monitor</string>
    <string name="Android_client_id">204108993001-cuui1ri3bmajpgf6vdaghgqejhbb0i2l.apps.googleusercontent.com</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Union Health</string>
    <string name="nav_header_subtitle">Patient Monitor</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="firebase_AddData_url"> https://us-central1-safetynet-1636515641171.cloudfunctions.net/updatePatientData/AddHeatlthData </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="google_sign_in_content_description">Google Sign In</string>
    <string name="hospital_at_home">Hospital at Home</string>
    <string name="for_patients">For Patients</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="please_enter_the_following_information">Please enter the following information</string>
    <string name="logon_id">Logon ID</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_splash">Splash</string>
    <string name="google_signin">Sign in using Google</string>
    <string name="missing_data">--</string>
    <string name="card_title">Vital</string>
    <string name="title_activity_call">Call_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="birthday_label">Birthday:</string>
    <string name="gender_label">Gender:</string>
    <string name="country_label">Country:</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="birthday_hint">Birthday</string>
    <string name="gender_hint">Gender</string>
    <string name="country_hint">Country</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="menu_profile_edit">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="em_contact_name_label">Name</string>
    <string name="em_contact_name_hint">Name</string>
    <string name="em_contact_phone_label">Phone</string>
    <string name="em_contact_phone_hint">Phone</string>
    <string name="emergency_contact_title">Emergency Contact</string>
    <string name="menu_single_vital">Single Vital</string>
    <string name="data_range_label">Data Range</string>
    <string name="add_vital">Add Vital</string>
    <string name="add_vital_data">Vital Data</string>
    <string name="add_vital_data_entry">Add Vital Data Entry</string>
</resources>