<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hospital_at_home"
        android:layout_above="@id/subtitle_text"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_patients"
        android:layout_above="@id/login_box"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/login_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/lightGray">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_to_your_account" />

        <TextView
            android:id="@+id/login_instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_text"
            android:text="@string/please_enter_the_following_information" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_instruction_text">

            <TableRow>

                <TextView
                    android:id="@+id/login_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logon_id" />

                <TextView
                    android:id="@+id/login_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />
            </TableRow>

            <TableRow>

                <EditText>

                </EditText>

                <EditText>


                </EditText>
            </TableRow>


        </TableLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_box"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/google_sign_in_content_description"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

</RelativeLayout>